
Change Log:
----------------------------------------------------------------------
----------------------------------------------------------------------

2.6.2 - 7/13/2012 - Aaron Edwards/Arnold Bailey
----------------------------------------------------------------------
- Added per shipment handling charge to USPS, one for domestic and one for international shipping.
- Fix some potential problems with new installs and the CubePoints gateway
- Add Argentina and Brazil to PayPal gateway countries

2.6.1 - 7/13/2012 - Aaron Edwards/Arnold Bailey
----------------------------------------------------------------------
- Display Shipping Option and Shipping Sub Option next to shipping cost on Order Manage Page.
- Added shipping method to the SHIPPINGINFO in email. If mp_shipping_info['method'] not yet set from actual shipping, displays the customer's choice.
- Show Shortcodes and importers tabs in listing only mode
- Major bugfix to gateway plugins settings filters
- Fix stripslashes issue with manual payments gateway
- Fix email filtering for manual payments gateway
- Change order of 'mp_new_order' hook
- Add some more filters for WPML compatibility
- Verify product_ids before adding to cart
- Fix Egypt Pounds currency symbol
- Fix missing labels for custom styles in Network settings

2.6.0 - 6/6/2012 - Aaron Edwards/Paul Menard
----------------------------------------------------------------------
- Added support for per Product and variation custom fields for personalization
- Allow shortcodes to work in custom page messages
- Fix issue with Stripe payment gateway JS conflict. http://premium.wpmudev.org/forums/topic/marketpress-problem-cant-finish-checking-out
- Fix an issue with numbered tags showing all products
- Bug fixes with $content argument in mp_product template function/shortcode
- Wrap prev/next nav links in wrapper for styling

2.5.9 - 5/5/2012 - Aaron Edwards/Arnold
----------------------------------------------------------------------